--- a/src/views/business/business-vat-check.njk
+++ b/src/views/business/business-vat-check.njk
@@ -27,7 +27,7 @@
                 text: "Business VAT number"
               },
               value: {
-                text: businessVat
+                text: vatNumber
               },
               actions: {
                 items: [
