capitalisation fixed as per bug

--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -58,7 +58,7 @@
         },
         {
           key: {
-            text: "Date of Birth"
+            text: "Date of birth"
           },
           value: {
             text: dateOfBirth
@@ -75,7 +75,7 @@
         },
         {
           key: {
-            text: "Customer Reference Number"
+            text: "Customer reference number"
           },
           value: {
             text: crn
