--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -1,6 +1,14 @@
 {% extends 'common/layout.njk' %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
+{% block beforeContent %}
+  <div class="govuk-grid-row sub-header-container govuk-!-padding-top-3">
+    <div class="govuk-grid-column-full govuk-!-text-align-right">
+      <a href="/auth/sign-out" class="govuk-link">Sign out</a>
+    </div>
+  </div>
+{% endblock %}
+
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -8,6 +16,7 @@
         <span class="govuk-caption-l">{{ auth.name }}</span>
         You have signed in
       </h1>
+
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
         <a href="/business-details">View and update your business details</a>
