--- a/src/views/business/business-email-check.njk
+++ b/src/views/business/business-email-check.njk
@@ -43,10 +43,7 @@
         }) }}
       </div>
 
-      {{ govukButton({
-        text: "Submit",
-        preventDoubleClick: true
-      }) }}
+      {{ govukButton({ text: "Submit", preventDoubleClick: true }) }}
     </form>
   </div>
 </div>
