--- a/src/views/business/business-phone-numbers-change.njk
+++ b/src/views/business/business-phone-numbers-change.njk
@@ -68,10 +68,7 @@
           }) }}
         </fieldset>
 
-        {{ govukButton({
-          text: "Continue",
-          preventDoubleClick: true
-        }) }}
+        {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
       </form>
     </div>
   </div>
