--- a/src/views/business/business-address-enter.njk
+++ b/src/views/business/business-address-enter.njk
@@ -116,10 +116,7 @@
         }) }}
       </fieldset>
 
-      {{ govukButton({
-        text: "Continue",
-        preventDoubleClick: true
-      }) }}
+      {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
     </form>
   </div>
 </div>
