--- a/src/views/business/business-phone-numbers-check.njk
+++ b/src/views/business/business-phone-numbers-check.njk
@@ -51,10 +51,7 @@
         </div>
       </dl>
 
-        {{ govukButton({
-          text: "Submit",
-          preventDoubleClick: true
-        }) }}
+        {{ govukButton({ text: "Submit", preventDoubleClick: true }) }}
     </form>
   </div>
 </div>
