--- a/src/views/business/business-vat-change.njk
+++ b/src/views/business/business-vat-change.njk
@@ -45,10 +45,7 @@
         }) }}
       </div>
 
-      {{ govukButton({
-        text: "Continue",
-        preventDoubleClick: true
-      }) }}
+      {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
     </form>
   </div>
 </div>
