--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -19,7 +19,8 @@
             classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
             href: "/auth/sign-in",
             isStartButton: true,
-            text: "Sign in"
+            text: "Sign in",
+            preventDoubleClick: true
           }) }}
 
           <h2 class="govuk-heading-m">Before you start</h2>
