back and sign out links added to error pages

--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -3,6 +3,10 @@
 {% set pageTitle = "Page not found" %}
 {% set metaDescription = "We could not find this page. Check the web address is correct and try again." %}
 
+{% block beforeContent %}
+  {{ appBackSignOutLink(backLink) }}
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
