--- a/src/views/errors/service-unavailable.njk
+++ b/src/views/errors/service-unavailable.njk
@@ -3,6 +3,10 @@
 {% set pageTitle = "Sorry, the service is unavailable" %}
 {% set metaDescription = "The service is not currently available, but you can contact us." %}
 
+{% block beforeContent %}
+  {{ appBackSignOutLink(backLink) }}
+{% endblock %}
+
 {% block error_content %}
 <h1 class="govuk-heading-l">
   Sorry, the service is unavailable
