--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -4,7 +4,7 @@
 {% set metaDescription = "There is a problem with this service, but you can contact us." %}
 
 {% block beforeContent %}
-  {{ appBackSignOutLink(backLink) }}
+  {{ appBackSignOutLink({ href: backLink }) }}
 {% endblock %}
 
 {% block error_content %}
