--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -1,4 +1,5 @@
 {% extends "errors/layout.njk" %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
 
 {% set pageTitle = "Sorry, there is a problem with the service" %}
 {% set metaDescription = "There is a problem with this service, but you can contact us." %}
