--- a/src/views/errors/service-unavailable.njk
+++ b/src/views/errors/service-unavailable.njk
@@ -1,4 +1,5 @@
 {% extends "errors/layout.njk" %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
 
 {% set pageTitle = "Sorry, the service is unavailable" %}
 {% set metaDescription = "The service is not currently available, but you can contact us." %}
