--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -5,7 +5,7 @@
 {% set metaDescription = "We could not find this page. Check the web address is correct and try again." %}
 
 {% block beforeContent %}
-  {{ appBackSignOutLink({ href: backLink }) }}
+  {{ appBackSignOutLink() }}
 {% endblock %}
 
 {% block content %}
