backlink changes made

--- a/src/views/common/navigation/back-sign-out-link.njk
+++ b/src/views/common/navigation/back-sign-out-link.njk
@@ -8,7 +8,7 @@
   }) }}
   </div>
 
-{% if auth.isauthenticated %}
+{% if auth.isAuthenticated %}
   <div  class="govuk-grid-column-one-third govuk-text-align-right">
     <a href="/auth/sign-out" class="govuk-link">Sign out</a>
   </div>
