--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -1,5 +1,5 @@
 {% extends "common/layout.njk" %}
-{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 
 {% set pageTitle = "Page not found" %}
 {% set metaDescription = "We could not find this page. Check the web address is correct and try again." %}
