--- a/src/views/business/business-type-change.njk
+++ b/src/views/business/business-type-change.njk
@@ -1,6 +1,6 @@
 {% extends 'common/layout.njk' %}
 
-{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% set pageTitle = "Change your business type" %}
