--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -1,7 +1,7 @@
 
 {% extends 'common/layout.njk' %}
 
-{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
