Update: row title

--- a/src/views/business/business-vat-check.njk
+++ b/src/views/business/business-vat-check.njk
@@ -24,7 +24,7 @@
           rows: [
             {
               key: {
-                text: "Business VAT number"
+                text: "VAT registration number"
               },
               value: {
                 text: vatNumber
