--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -5,7 +5,7 @@
 {% set metaDescription = "There is a problem with this service, but you can contact us." %}
 
 {% block beforeContent %}
-  {{ appBackSignOutLink() }}
+  {{ appBackSignOutLink{(href: backLink)} }}
 {% endblock %}
 
 {% block error_content %}
