--- a/src/views/errors/service-unavailable.njk
+++ b/src/views/errors/service-unavailable.njk
@@ -5,7 +5,7 @@
 {% set metaDescription = "The service is not currently available, but you can contact us." %}
 
 {% block beforeContent %}
-  {{ appBackSignOutLink() }}
+  {{ appBackSignOutLink{(href: backLink)} }}
 {% endblock %}
 
 {% block error_content %}
