--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -147,18 +147,18 @@
             {% if vatNumber %}
               <ul class="govuk-summary-list__actions-list">
                 <li class="govuk-summary-list__actions-list-item">
-                  <a class="govuk-link" href="/business-vat-remove">
+                  <a class="govuk-link" href="/business-VAT-registration-remove">
                     Remove<span class="govuk-visually-hidden"> VAT registration number</span>
                   </a>
                 </li>
                 <li class="govuk-summary-list__actions-list-item">
-                  <a class="govuk-link" href="/business-vat-change">
+                  <a class="govuk-link" href="/business-VAT-registration-number-change">
                     Change<span class="govuk-visually-hidden"> VAT registration number</span>
                   </a>
                 </li>
               </ul>
             {% else %}
-              <a class="govuk-link" href="/business-vat-change">
+              <a class="govuk-link" href="/business-VAT-registration-number-change">
                 Add<span class="govuk-visually-hidden"> VAT registration number</span>
               </a>
             {% endif %}
