--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -1,7 +1,12 @@
 {% extends "common/layout.njk" %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 
 {% set pageTitle = "Page not found" %}
 {% set metaDescription = "We could not find this page. Check the web address is correct and try again." %}
+
+{% block beforeContent %}
+  {{ appBackSignOutLink({href: backLink}) }}
+{% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
