--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -1,7 +1,12 @@
 {% extends "errors/layout.njk" %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 
 {% set pageTitle = "Sorry, there is a problem with the service" %}
 {% set metaDescription = "There is a problem with this service, but you can contact us." %}
+
+{% block beforeContent %}
+  {{ appBackSignOutLink({href: backLink}) }}
+{% endblock %}
 
 {% block error_content %}
 <h1 class="govuk-heading-l">
