--- a/src/views/business/business-VAT-registration-number-change.njk
+++ b/src/views/business/business-VAT-registration-number-change.njk
@@ -35,6 +35,9 @@
             classes: "govuk-label--l",
             isPageHeading: true
           },
+          hint: {
+            text: "This is 9 numbers, sometimes with ‘GB’ at the start, for example GB123456789 or 123456789. You can find it on your company's VAT registration certificate."
+          },
           classes: "govuk-input--width-20",
           id: "business-vat",
           name: "vatNumber",
