--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -145,18 +145,18 @@
             {% if hasVatNumber %}
               <ul class="govuk-summary-list__actions-list">
                 <li class="govuk-summary-list__actions-list-item">
-                  <a class="govuk-link" href="{{vatRemoveLink}}">
+                  <a class="govuk-link" href="/business-vat-registration-remove">
                     Remove<span class="govuk-visually-hidden"> VAT registration number</span>
                   </a>
                 </li>
                 <li class="govuk-summary-list__actions-list-item">
-                  <a class="govuk-link" href="{{vatChangeLink}}">
+                  <a class="govuk-link" href="/business-vat-registration-number-change">
                     Change<span class="govuk-visually-hidden"> VAT registration number</span>
                   </a>
                 </li>
               </ul>
             {% else %}
-              <a class="govuk-link" href="{{vatChangeLink}}">
+              <a class="govuk-link" href="/business-vat-registration-number-change">
                 Add<span class="govuk-visually-hidden"> VAT registration number</span>
               </a>
             {% endif %}
