--- a/src/views/business/business-VAT-registration-remove.njk
+++ b/src/views/business/business-VAT-registration-remove.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink %}
+{% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
