--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -7,7 +7,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block beforeContent %}
-  {{ appBackSignOutLink({ href: '/business-details'}) }}
+  {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
 {% block content %}
