--- a/src/views/business/business-VAT-registration-number-change.njk
+++ b/src/views/business/business-VAT-registration-number-change.njk
@@ -36,7 +36,7 @@
             isPageHeading: true
           },
           hint: {
-            text: "This is 9 numbers, sometimes with ‘GB’ at the start, for example GB123456789 or 123456789. You can find it on your company's VAT registration certificate."
+            text: "This is the 9 digit number on your VAT registration certification. You only need to enter the numbers. For example, if your VAT registration number is GB123456789, you should enter 123456789."
           },
           classes: "govuk-input--width-20",
           id: "business-vat",
