--- a/src/views/business/business-name-change.njk
+++ b/src/views/business/business-name-change.njk
@@ -35,7 +35,7 @@
           },
           id: "business-name",
           name: "businessName",
-          value: changeBusinessName or businessName,
+          value: changeBusinessName,
           errorMessage: errors.businessName and {
             text: errors.businessName.text
           }
