--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -32,9 +32,9 @@
       {% endfor %}
     {% endset %}
 
-    {% set displayPersonalPhone %}
-      <div>Telephone: <div class="govuk-hint" style="display: inline;">{{personalTelephone}}</div></div>
-      <div>Mobile: <div class="govuk-hint" style="display: inline;">{{personalMobile}}</div></div>
+    {% set displayPersonalTelephone %}
+      <div>Telephone: <div class="govuk-hint" style="display: inline;">{{personalTelephone.telephone}}</div></div>
+      <div>Mobile: <div class="govuk-hint" style="display: inline;">{{personalTelephone.mobile}}</div></div>
     {% endset %}
 
     {{ govukSummaryList({
@@ -103,13 +103,13 @@
             text: "Personal phone numbers"
           },
           value: {
-            html: displayPersonalPhone
+            html: displayPersonalTelephone
           },
           actions: {
             items: [
               {
-                href: "/",
-                text: "Change",
+                href: personalPhoneNumbersLink,
+                text: personalPhoneAction,
                 visuallyHiddenText: "personal phone numbers"
               }
             ]
