--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -33,8 +33,8 @@
     {% endset %}
 
     {% set displayPersonalTelephone %}
-      <div>Telephone: <div class="govuk-hint" style="display: inline;">{{personalTelephone.telephone}}</div></div>
-      <div>Mobile: <div class="govuk-hint" style="display: inline;">{{personalTelephone.mobile}}</div></div>
+      <div>Telephone: <div class="govuk-hint display-inline">{{personalTelephone.telephone}}</div></div>
+      <div>Mobile: <div class="govuk-hint display-inline">{{personalTelephone.mobile}}</div></div>
     {% endset %}
 
     {{ govukSummaryList({
