Update message for missing number in business details

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -157,7 +157,7 @@
               </ul>
            {% else %}
            <dd class="govuk-summary-list__value">
-            Number not added
+            No number added
           </dd> 
           <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/business-vat-registration-number-change">
