--- a/src/views/business/business-address-select-change.njk
+++ b/src/views/business/business-address-select-change.njk
@@ -1,8 +1,8 @@
 {% extends 'common/layout.njk' %}
 
-{% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
@@ -29,25 +29,27 @@
               {{ pageTitle }}
             </h1>
           </legend>
+          <div class="govuk-form-group govuk-body">
+            <span class="govuk-!-margin-bottom govuk-!-font-weight-bold">UK postcode</span>
+            <div class="govuk-!-margin-bottom-">{{postcode}}</div>
+            <a href="/business-address-change" class="govuk-link">Change <span class="govuk-visually-hidden">postcode</span></a>
+          </div>
 
-          <p>If you do not have a UK postcode, enter the address manually.</p>
-
-          {{ govukInput({
+          {{ govukSelect({
+            id: "addresses",
+            name: "addresses",
             label: {
-              text: "UK postcode"
+              html: '<div class="govuk-label govuk-!-font-weight-bold">Select an address</div>'
             },
-            id: "business-postcode",
-            name: "businessPostcode",
-            value: businessPostcode,
-            classes: "govuk-!-width-one-third"
+            items: displayAddresses
           }) }}
-
-          <p class="govuk-body"><a href="/business-address-enter" class="govuk-link">Enter address manually</a></p>
-
         </fieldset>
+
+        <p class="govuk-body"><a href="/business-address-enter" class="govuk-link">Enter address manually</a></p>
 
         {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
       </form>
     </div>
   </div>
+
 {% endblock %}
