--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -20,6 +20,9 @@
       <p>
         <a href="/business-details">View and update your business details</a>
       </p>
+      <p>
+        <a href="/upload" target="blank">View and submit documents (opens in new tab)</a>
+      </p>
       <h3 class="govuk-heading-m"> Personal details</h3>
       <p>
         <a href="/personal-details">View and update your personal details</a>
