--- a/src/views/upload/upload-status.njk
+++ b/src/views/upload/upload-status.njk
@@ -61,6 +61,20 @@
             could cause delays.
         </p>
 
+      <h2 class="govuk-heading-m">Files added</h2>
+
+
+      <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Filename and status
+          </dt>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#">Delete<span class="govuk-visually-hidden"> name</span></a>
+          </dd>
+        </div>
+      </dl>
+
 
         <div class="container--doc-upload">
             <h2 class="govuk-heading-m govuk-!-margin-top-7">
