--- a/src/views/personal/personal-dob-change.njk
+++ b/src/views/personal/personal-dob-change.njk
@@ -18,7 +18,7 @@
         titleText: "There is a problem",
         errorList: [
           {
-            text: errors.businessEmail.text,
+            text: 'Date of birth must be a date in the past and valid',
             href: "#business-email"
           }
         ]
@@ -41,6 +41,9 @@
           },
           hint: {
             text: metaDescription
+          },
+          errorMessage: errors and {
+                text: 'Date of birth must be a date in the past and valid'
           },
           items: [
             {
