--- a/src/views/personal/personal-dob-change.njk
+++ b/src/views/personal/personal-dob-change.njk
@@ -19,7 +19,7 @@
         errorList: [
           {
             text: 'Date of birth must be a date in the past and valid',
-            href: "#business-email"
+            href: "#month"
           }
         ]
     }) }}
