Refactor: businessUkPostcodeSchema to ukPostCodeSchema for reusability

--- a/src/views/business/business-address-change.njk
+++ b/src/views/business/business-address-change.njk
@@ -36,12 +36,12 @@
             label: {
               text: "UK postcode"
             },
-            id: "business-postcode",
-            name: "businessPostcode",
-            value: businessPostcode,
+            id: "postcode",
+            name: "postcode",
+            value: postcode,
             classes: "govuk-!-width-one-third",
-            errorMessage: errors.businessPostcode and {
-            text: errors.businessPostcode.text
+            errorMessage: errors.postcode and {
+            text: errors.postcode.text
             }
           }) }}
 
