--- a/src/views/personal/personal-dob-check.njk
+++ b/src/views/personal/personal-dob-check.njk
@@ -6,7 +6,7 @@
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ subHeader(userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
@@ -27,14 +27,14 @@
                 text: "Date of birth"
               },
               value: {
-                text: dobText
+                text: dateOfBirth
               },
               actions: {
                 items: [
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "personal dob"
+                    visuallyHiddenText: "change date of birth"
                   }
                 ]
               }
