--- a/src/views/personal/personal-address-select.njk
+++ b/src/views/personal/personal-address-select.njk
@@ -32,7 +32,7 @@
           <div class="govuk-form-group govuk-body">
             <span class="govuk-!-margin-bottom govuk-!-font-weight-bold">UK postcode</span>
             <div class="govuk-!-margin-bottom-">{{postcode}}</div>
-            <a href="/personal-address-change" class="govuk-link">Change <span class="govuk-visually-hidden">postcode</span></a>
+            <a href="/account-address-change" class="govuk-link">Change <span class="govuk-visually-hidden">postcode</span></a>
           </div>
 
           {{ govukSelect({
