--- a/src/views/personal/personal-dob-change.njk
+++ b/src/views/personal/personal-dob-change.njk
@@ -15,6 +15,17 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    {% if dateError %}
+      {{ govukErrorSummary({
+          titleText: "There is a problem",
+          errorList:  [
+          {
+            text: dateError,
+            href: dateErrorRef
+          }
+        ]
+      }) }}
+    {% endif %}
     <form method="post" novalidate>
       <input type="hidden" name="crumb" value="{{ crumb }}">
       <div class="govuk-form-group">
@@ -29,9 +40,6 @@
           },
           hint: {
             text: hint
-          },
-          errorMessage: dateError and {
-                text: dateError
           },
           items: [
             {
