Update: personal details page with change link

--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -125,7 +125,7 @@
           actions: {
             items: [
               {
-                href: "/",
+                href: personalEmailChangeLink,
                 text: "Change",
                 visuallyHiddenText: "personal email address"
               }
