Change error messages from ticket to design descriptions

--- a/src/views/personal/personal-dob-change.njk
+++ b/src/views/personal/personal-dob-change.njk
@@ -41,6 +41,9 @@
           hint: {
             text: hint
           },
+          errorMessage: dateError and {
+            text: dateError
+          },
           items: [
             {
               classes: dayClass or "govuk-input--width-2 ",
