--- a/src/views/personal/personal-dob-change.njk
+++ b/src/views/personal/personal-dob-change.njk
@@ -15,17 +15,29 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if dateError %}
+    {% if errors %}
+      {% set dateError =
+        errors.day
+        or errors.month
+        or errors.year
+      %}
+
+      {% if errors.day %}
+        {% set dayErrorClass = " govuk-input--error" %}
+      {% endif %}
+      {% if errors.month %}
+        {% set monthErrorClass = " govuk-input--error" %}
+      {% endif %}
+      {% if errors.year %}
+        {% set yearErrorClass = " govuk-input--error" %}
+      {% endif %}
+
       {{ govukErrorSummary({
           titleText: "There is a problem",
-          errorList:  [
-          {
-            text: dateError,
-            href: dateErrorRef
-          }
-        ]
+          errorList: errors | toErrorList
       }) }}
     {% endif %}
+
     <form method="post" novalidate>
       <input type="hidden" name="crumb" value="{{ crumb }}">
       <div class="govuk-form-group">
@@ -38,30 +50,30 @@
               classes: "govuk-fieldset__legend--l"
             }
           },
+          errorMessage: dateError and {
+            text: dateError.text
+          },
           hint: {
             text: hint
           },
-          errorMessage: dateError and {
-            text: dateError
-          },
           items: [
             {
-              classes: dayClass or "govuk-input--width-2 ",
+              classes: "govuk-input--width-2 " + dayErrorClass,
               name: "day",
-              value: dobDay,
-              id: 'dobDay'
+              value: day,
+              id: 'day'
             },
             {
-              classes: monthClass or 'govuk-input--width-2',
+              classes: "govuk-input--width-2 " + monthErrorClass,
               name: "month",
-              value: dobMonth,
-              id: 'dobMonth'
+              value: month,
+              id: 'month'
             },
             {
-              classes: yearClass or "govuk-input--width-4 ",
+              classes: "govuk-input--width-4 " + yearErrorClass,
               name: "year",
-              value: dobYear,
-              id: 'dobYear'
+              value: year,
+              id: 'year'
             }
           ]
         }) }}
@@ -71,6 +83,3 @@
   </div>
 </div>
 {% endblock %}
-
-
-
