Personal Address pages and update (#162)
https://eaflood.atlassian.net/browse/SFD2-155

This PR adds the change link and pages required for updating a user’s personal address.

Integrates with the #148 (already configured in a previous PR) to allow postcode search and address selection.
Adds manual entry pages for cases where a user needs to enter their address directly.

--- a/src/views/personal/personal-address-change.njk
+++ b/src/views/personal/personal-address-change.njk
@@ -7,7 +7,7 @@
 {% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ subHeader(userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
@@ -45,7 +45,7 @@
             }
           }) }}
 
-          <p class="govuk-body"><a href="/business-address-enter" class="govuk-link">Enter address manually</a></p>
+          <p class="govuk-body"><a href="/account-address-enter" class="govuk-link">Enter address manually</a></p>
 
         </fieldset>
 
