--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -66,7 +66,7 @@
           actions: {
             items: [
               {
-                href: "/",
+                href: dobChangeLink,
                 text: "Change",
                 visuallyHiddenText: "date of birth"
               }
